Add azuresphere virtual device example

--- a/AzureSphere/CMakeLists.txt
+++ b/AzureSphere/CMakeLists.txt
@@ -22,10 +22,16 @@ target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-lua-
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-mt3620-g100-device.a)
 set (TARGET_CONFIG "mt3620.json")
 
-target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-modbus-device-service.a)
-set (DEVICE_CONFIG "config/modbus.json" "config/profiles/Damocles2-Mini.json")
-set (DRIVER modbus)
-add_definitions ("-DDEVICE_MODBUS")
+if (${DEVICE} STREQUAL "modbus")
+  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-modbus-device-service.a)
+  set (DEVICE_CONFIG "config/modbus.json" "config/profiles/Damocles2-Mini.json")
+  set (DRIVER modbus)
+  add_definitions ("-DDEVICE_MODBUS")
+elseif (${DEVICE} STREQUAL "virtual")
+  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-virtual-device-service.a)
+  set (DEVICE_CONFIG "config/virtual.json" "config/profiles/device-virtual.json")
+  add_definitions ("-DDEVICE_VIRTUAL")
+endif ()
 
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-devsdk.a)
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt.a)
