XRT-586 Add bacnet to main and cmakelists

--- a/AzureSphere/CMakeLists.txt
+++ b/AzureSphere/CMakeLists.txt
@@ -37,6 +37,11 @@ if (${DEVICE} STREQUAL "modbus")
   set (DEVICE_CONFIG "config/modbus.json" "config/profiles/Damocles2-Mini.json")
   set (DRIVER modbus)
   add_definitions ("-DDEVICE_MODBUS")
+elseif (${DEVICE} STREQUAL "bacnet")
+  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-bacnet-ip-device-service.a)
+  set (DEVICE_CONFIG "config/bacnet.json" "config/profiles/bacnet-simulator.json")
+  set (DRIVER bacnet-ip)
+  add_definitions ("-DDEVICE_BACNET")
 elseif (${DEVICE} STREQUAL "virtual")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-virtual-device-service.a)
   set (DEVICE_CONFIG "config/virtual.json" "config/profiles/device-virtual.json")
