--- a/AzureSphere/mt3620-dk/app_manifest.json
+++ b/AzureSphere/mt3620-dk/app_manifest.json
@@ -15,7 +15,8 @@
     ],
     "Adc": ["$MT3620_RDB_ADC_CONTROLLER0"],
     "I2cMaster": ["$MT3620_RDB_HEADER4_ISU2_I2C"],
-    "AllowedTcpServerPorts": [ 22222 ],
+    "AllowedTcpServerPorts": [ 22222, 47808 ],
+    "AllowedUdpServerPorts": [ 47808 ],
     "NetworkConfig" : true,
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
