--- a/AzureSphere/mt3620-g100/app_manifest.json
+++ b/AzureSphere/mt3620-g100/app_manifest.json
@@ -7,7 +7,8 @@
   "Capabilities": {
     "AllowedConnections" : [ "10.0.0.1", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net" ],
     "Gpio": [ "$MT3620_GPIO8", "$MT3620_GPIO9", "$MT3620_GPIO10" ],
-    "AllowedTcpServerPorts": [ 22222 ],
+    "AllowedTcpServerPorts": [ 22222, 47808 ],
+    "AllowedUdpServerPorts": [ 47808 ],
     "NetworkConfig" : true,
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
