--- a/SimpleXRTComponentExample/config/app_component.json
+++ b/SimpleXRTComponentExample/config/app_component.json
@@ -1,7 +1,7 @@
 {
-  "Library": "component/libmycomponent.so",
-  "Factory": "my_component_factory",
-  "Name": "MyComponent",
+  "Library": "app-component/libapp-component.so",
+  "Factory": "app_component_factory",
+  "Name": "ApplicationComponent",
   "Bus":"bus",
   "Logger":"logger_info",
   "RequestTopic":"virtual_device_service/transformed_data",
