XRT-931 Update mt3620-sk to include network enable

--- a/AzureSphere/mt3620-sk/app_manifest.json
+++ b/AzureSphere/mt3620-sk/app_manifest.json
@@ -18,6 +18,7 @@
     "I2cMaster": ["$AVNET_MT3620_SK_ISU2_I2C"],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
     "AllowedUdpServerPorts": [ 47808 ],
+    "NetworkConfig": true,
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
   "ApplicationType": "Default"
