XRT-924 Example updates for AzureSphere SR620 guardian device

--- a/AzureSphere/CMakeLists.txt
+++ b/AzureSphere/CMakeLists.txt
@@ -14,10 +14,7 @@ set (SYSROOT "${SDK_ROOT}/Sysroots/${AZURE_SPHERE_TARGET_API_SET}")
 add_executable (${PROJECT_NAME} main.c)
 
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-azure-exporter.a)
-target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-influxdb-exporter.a)
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-log-exporter.a)
-target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-transform.a)
-target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-lua-transform.a lua)
 
 message (STATUS "Building for ${BOARD} with ${DEVICE} device service")
 
@@ -30,6 +27,9 @@ elseif (${BOARD} STREQUAL "mt3620-dk")
 elseif (${BOARD} STREQUAL "mt3620-sk")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-mt3620-sk-device.a)
   set (TARGET_CONFIG "avnet_mt3620_sk.json")
+elseif (${BOARD} STREQUAL "mt3620-sr620")
+  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-mt3620-sr620-device.a)
+  set (TARGET_CONFIG "ailink_wfm620rsc1.json")
 endif ()
 
 if (${DEVICE} STREQUAL "modbus")
@@ -51,8 +51,6 @@ endif ()
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-devsdk.a)
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt.a)
 target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/iot/lib/libiot.a)
-target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/thrift/lib/libthrift.a)
-target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/thrift/lib/libthrift-tcp.a)
 target_link_libraries (${PROJECT_NAME} ${DRIVER} applibs azureiot curl pthread gcc_s c)
 
 target_include_directories (${PROJECT_NAME} PRIVATE ${SYSROOT}/opt/iotech/xrt/include/)
