Added missing elseif

--- a/AzureSphere/CMakeLists.txt
+++ b/AzureSphere/CMakeLists.txt
@@ -37,7 +37,7 @@ if (${DEVICE} STREQUAL "ethernetip")
   set (DEVICE_CONFIG "config/ethernetip.json" "config/profiles/Allen-Bradley-Azure.json")
   set (DRIVER ethernet-ip)
   add_definitions ("-DDEVICE_ETHERNETIP")
-if (${DEVICE} STREQUAL "modbus")
+elseif (${DEVICE} STREQUAL "modbus")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-modbus-device-service.a)
   set (DEVICE_CONFIG "config/modbus.json" "config/profiles/Damocles2-Mini.json")
   set (DRIVER modbus)
