--- a/AzureSphere/CMakeLists.txt
+++ b/AzureSphere/CMakeLists.txt
@@ -34,22 +34,18 @@ endif ()
 
 if (${DEVICE} STREQUAL "ethernetip")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-ethernet-ip-device-service.a)
-  set (DEVICE_CONFIG "config/ethernetip.json" "config/profiles/Allen-Bradley-Azure.json")
   set (DRIVER ethernet-ip)
   add_definitions ("-DDEVICE_ETHERNETIP")
 elseif (${DEVICE} STREQUAL "modbus")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-modbus-device-service.a)
-  set (DEVICE_CONFIG "config/modbus.json" "config/profiles/Damocles2-Mini.json")
   set (DRIVER modbus)
   add_definitions ("-DDEVICE_MODBUS")
 elseif (${DEVICE} STREQUAL "bacnet")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-bacnet-ip-device-service.a)
-  set (DEVICE_CONFIG "config/bacnet.json" "config/profiles/bacnet-simulator.json")
   set (DRIVER bacnet-ip)
   add_definitions ("-DDEVICE_BACNET")
 elseif (${DEVICE} STREQUAL "virtual")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-virtual-device-service.a)
-  set (DEVICE_CONFIG "config/virtual.json" "config/profiles/device-virtual.json")
   add_definitions ("-DDEVICE_VIRTUAL")
 endif ()
 
@@ -62,5 +58,4 @@ target_include_directories (${PROJECT_NAME} PRIVATE ${SYSROOT}/opt/iotech/xrt/in
 target_include_directories (${PROJECT_NAME} PRIVATE ${SYSROOT}/opt/iotech/iot/include/)
 
 azsphere_target_hardware_definition (${PROJECT_NAME} TARGET_DIRECTORY "${SDK_ROOT}/HardwareDefinitions" TARGET_DEFINITION ${TARGET_CONFIG})
-azsphere_target_add_image_package (${PROJECT_NAME} RESOURCE_FILES "config/main.json" "config/azure.json" "config/logger.json" "config/pool.json" "config/scheduler.json" "config/bus.json" "config/logexport.json" "config/mt3620.json" ${DEVICE_CONFIG} "config/profiles/profiles.json")
-
+azsphere_target_add_image_package (${PROJECT_NAME} RESOURCE_FILES "config/main.json" "config/azure.json" "config/logger.json" "config/udp-logger.json" "config/pool.json" "config/scheduler.json" "config/bus.json" "config/logexport.json" "config/mt3620.json" "config/profiles/profiles.json")
