--- a/AzureSphere/Makefile
+++ b/AzureSphere/Makefile
@@ -14,9 +14,9 @@ all: monitor
 # Build the application in a 'build' directory
 build:
 	if [ ! -d build ]; then mkdir build; fi
-	cp config/profiles/profiles-$(DEVICE).json config/profiles/profiles.json; \
-	cp config/main-$(DEVICE).json config/main.json; \
-	cp config/azure-$(DEVICE).json config/azure.json; \
+	cp deployment/profiles/profiles-$(DEVICE).json deployment/profiles/profiles.json; \
+	cp deployment/config/main-$(DEVICE).json deployment/config/main.json; \
+	cp deployment/config/azure-$(DEVICE).json deployment/config/azure.json; \
 	cp $(BOARD)/app_manifest.json app_manifest.json; \
 	(cd build && cmake -G "Ninja" \
         -DCMAKE_TOOLCHAIN_FILE="/opt/azurespheresdk/CMakeFiles/AzureSphereToolchain.cmake" \
