--- a/AzureSphere/CMakeSettings.json
+++ b/AzureSphere/CMakeSettings.json
@@ -14,17 +14,17 @@
       "variables": [
         {
           "name": "AZURE_SPHERE_TARGET_TOOLS_REVISION",
-          "value": "21.02",
+          "value": "21.10",
           "type": "STRING"
         },
         {
           "name": "AZURE_SPHERE_TARGET_API_SET",
-          "value": "8",
+          "value": "11",
           "type": "STRING"
         },
         {
           "name": "DEVICE",
-          "value": "modbus",
+          "value": "bacnet",
           "type": "STRING"
         },
         {
@@ -47,17 +47,17 @@
       "variables": [
         {
           "name": "AZURE_SPHERE_TARGET_TOOLS_REVISION",
-          "value": "21.02",
+          "value": "21.10",
           "type": "STRING"
         },
         {
           "name": "AZURE_SPHERE_TARGET_API_SET",
-          "value": "8",
+          "value": "11",
           "type": "STRING"
         },
         {
           "name": "DEVICE",
-          "value": "modbus",
+          "value": "bacnet",
           "type": "STRING"
         },
         {
