XRT-1230: updated cmake

--- a/AzureSphere/CMakeLists.txt
+++ b/AzureSphere/CMakeLists.txt
@@ -58,6 +58,10 @@ elseif (${DEVICE} STREQUAL "bacnet")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-bacnet-ip-device-service.a)
   set (DRIVER bacnet-ip)
   add_definitions ("-DDEVICE_BACNET")
+elseif (${DEVICE} STREQUAL "ethernetip")
+  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-ethernet-ip-device-service.a)
+  set (DRIVER ethernet-ip)
+add_definitions ("-DDEVICE_ETHERNETIP")
 elseif (${DEVICE} STREQUAL "virtual")
   target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-virtual-device-service.a)
   add_definitions ("-DDEVICE_VIRTUAL")
