--- a/AzureSphere/mt3620-dk/app_manifest.json
+++ b/AzureSphere/mt3620-dk/app_manifest.json
@@ -5,7 +5,7 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "10.0.0.255", "10.0.0.95", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net", "prod.time.sphere.azure.net", "time.sphere.azure.net"],
+    "AllowedConnections" : [ "<broadcast-ip-address>", "<target-device-ip-address>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net", "prod.time.sphere.azure.net", "time.sphere.azure.net"],
     "Gpio": [ 
       "$MT3620_RDB_LED1_RED", "$MT3620_RDB_LED1_GREEN", "$MT3620_RDB_LED1_BLUE",
       "$MT3620_RDB_LED2_RED", "$MT3620_RDB_LED2_GREEN", "$MT3620_RDB_LED2_BLUE",
