--- a/AzureSphere/mt3620-sr620/app_manifest.json
+++ b/AzureSphere/mt3620-sr620/app_manifest.json
@@ -5,11 +5,10 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "192.158.4.40","10.0.0.1", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net" ],
-    "Gpio": [ "$MT3620_GPIO8", "$MT3620_GPIO9", "$MT3620_GPIO10" ],
+    "AllowedConnections" : [ "10.0.0.1", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net" ],
+    "Gpio": [ "$MT3620_GPIO0", "$MT3620_GPIO1", "$MT3620_GPIO43", "$MT3620_GPIO43" ],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
     "AllowedUdpServerPorts": [ 47808 ],
-    "MutableStorage": { "SizeKB": 32 },
     "NetworkConfig" : true,
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
