--- a/AzureSphere/mt3620-g100/app_manifest.json
+++ b/AzureSphere/mt3620-g100/app_manifest.json
@@ -10,6 +10,7 @@
     "AllowedTcpServerPorts": [ 22222, 47808 ],
     "AllowedUdpServerPorts": [ 47808 ],
     "MutableStorage": { "SizeKB": 32 },
+    "PowerControls": ["ForceReboot"],
     "NetworkConfig" : true,
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
