--- a/AzureSphere/CMakeSettings.json
+++ b/AzureSphere/CMakeSettings.json
@@ -14,7 +14,7 @@
       "variables": [
         {
           "name": "AZURE_SPHERE_TARGET_TOOLS_REVISION",
-          "value": "20.10",
+          "value": "21.10",
           "type": "STRING"
         },
         {
@@ -24,7 +24,7 @@
         },
         {
           "name": "DEVICE",
-          "value": "modbus",
+          "value": "bacnet",
           "type": "STRING"
         },
         {
@@ -47,7 +47,7 @@
       "variables": [
         {
           "name": "AZURE_SPHERE_TARGET_TOOLS_REVISION",
-          "value": "20.10",
+          "value": "21.10",
           "type": "STRING"
         },
         {
@@ -57,7 +57,7 @@
         },
         {
           "name": "DEVICE",
-          "value": "modbus",
+          "value": "bacnet",
           "type": "STRING"
         },
         {
