XRT-1344: added mutable storage & power controls

--- a/AzureSphere/mt3620-dk/app_manifest.json
+++ b/AzureSphere/mt3620-dk/app_manifest.json
@@ -17,6 +17,8 @@
     "I2cMaster": ["$MT3620_RDB_HEADER4_ISU2_I2C"],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
     "AllowedUdpServerPorts": [ 47808 ],
+    "MutableStorage": { "SizeKB": 32 },
+    "PowerControls": ["ForceReboot"],
     "NetworkConfig" : true,
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
