--- a/AzureSphere/mt3620-g100/app_manifest.json
+++ b/AzureSphere/mt3620-g100/app_manifest.json
@@ -5,10 +5,10 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "<target-device-ip-address>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
+    "AllowedConnections" : [ "<target-device-ip-address>", "<host-ip>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
     "Gpio": [ "$MT3620_GPIO8", "$MT3620_GPIO9", "$MT3620_GPIO10" ],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
-    "AllowedUdpServerPorts": [ 47808 ],
+    "AllowedUdpServerPorts": [ 47808, 1999 ],
     "NetworkConfig" : true,
     "MutableStorage": { "SizeKB": 32 },
     "PowerControls": ["ForceReboot"],
