--- a/AzureSphere/mt3620-g100/app_manifest.json
+++ b/AzureSphere/mt3620-g100/app_manifest.json
@@ -5,12 +5,13 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "192.168.4.0", "192.168.4.1", "192.168.4.3","192.168.4.4", "192.168.4.5","192.168.4.6", "10.0.0.1", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
+    "AllowedConnections" : [ "<target-device-ip-address>", "<host-ip>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
     "Gpio": [ "$MT3620_GPIO8", "$MT3620_GPIO9", "$MT3620_GPIO10" ],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
-    "AllowedUdpServerPorts": [ 47808 ],
+    "AllowedUdpServerPorts": [ 47808, 1999 ],
     "NetworkConfig" : true,
-    "MutableStorage": { "SizeKB": 64 },
+    "MutableStorage": { "SizeKB": 32 },
+    "PowerControls": ["ForceReboot"],
     "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
   "ApplicationType": "Default"
