XRT-1351: temp commit to wfh

--- a/AzureSphere/app_manifest.json
+++ b/AzureSphere/app_manifest.json
@@ -5,10 +5,10 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "<target-device-ip-address>", "192.168.50.8", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
+    "AllowedConnections" : [ "192.168.4.0", "192.168.4.1", "192.168.4.3","192.168.4.4", "192.168.4.5","192.168.4.6", "10.0.0.1", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
     "Gpio": [ "$MT3620_GPIO8", "$MT3620_GPIO9", "$MT3620_GPIO10" ],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
-    "AllowedUdpServerPorts": [ 47808, 1999 ],
+    "AllowedUdpServerPorts": [ 47808 ],
     "NetworkConfig" : true,
     "MutableStorage": { "SizeKB": 32 },
     "PowerControls": ["ForceReboot"],
