--- a/AzureSphere/mt3620-dk/app_manifest.json
+++ b/AzureSphere/mt3620-dk/app_manifest.json
@@ -5,7 +5,7 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "<host-ip>", "<target-device-ip-address>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net" ],
+    "AllowedConnections" : [ "192.168.50.8", "<target-device-ip-address>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net" ],
     "Gpio": [
       "$MT3620_RDB_LED1_RED", "$MT3620_RDB_LED1_GREEN", "$MT3620_RDB_LED1_BLUE",
       "$MT3620_RDB_LED2_RED", "$MT3620_RDB_LED2_GREEN", "$MT3620_RDB_LED2_BLUE",
@@ -20,7 +20,7 @@
     "MutableStorage": { "SizeKB": 32 },
     "PowerControls": ["ForceReboot"],
     "NetworkConfig" : true,
-    "DeviceAuthentication": "<tenant-uuid-identifier>"
+    "DeviceAuthentication": "457d3018-e029-4d55-9ad9-f9e9ce6f9474"
   },
   "ApplicationType": "Default"
 }
