XRT-1351: V2 config updates

--- a/AzureSphere/mt3620-g100/app_manifest.json
+++ b/AzureSphere/mt3620-g100/app_manifest.json
@@ -5,14 +5,14 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "AllowedConnections" : [ "<target-device-ip-address>", "192.168.50.8", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
+    "AllowedConnections" : [ "<target-device-ip-address>", "<host-ip>", "global.azure-devices-provisioning.net", "IOTechHub.azure-devices.net"],
     "Gpio": [ "$MT3620_GPIO8", "$MT3620_GPIO9", "$MT3620_GPIO10" ],
     "AllowedTcpServerPorts": [ 22222, 47808 ],
     "AllowedUdpServerPorts": [ 47808, 1999 ],
     "NetworkConfig" : true,
     "MutableStorage": { "SizeKB": 32 },
     "PowerControls": ["ForceReboot"],
-    "DeviceAuthentication": "457d3018-e029-4d55-9ad9-f9e9ce6f9474"
+    "DeviceAuthentication": "<tenant-uuid-identifier>"
   },
   "ApplicationType": "Default"
 }
